--- a/index.html
+++ b/index.html
@@ -14,9 +14,24 @@
             <h1 class="title">enter countdown title</h1>
             <input type="text" id="event" placeholder="Enter an event to count for?">
             <h1 class="title">pick date</h1>
-            <input type="date">
+            <input type="date" id="event-dateTime">
             <button type="submit" id="submit-btn">submit</button>
         </form>
+    </div>
+
+    <div class="countdown-container">
+        <h1>Event: </h1>
+        <h1 class="event-value"></h1>
+        <h1>Time to event:</h1>
+        <h1 id="event-countdown">
+            <span id="months">10m:</span>
+            <span id="weeks">06w:</span>
+            <span id="days">10d:</span>
+            <span id="hours">06h:</span>
+            <span id="minutes">30m:</span>
+            <span id="seconds">40s</span>
+        </h1>
+        <button id="reset-btn">Reset</button>
     </div>
 
     <script src="index.js"></script>
