--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
         <h1 class="event-value"></h1>
         <h1>Time to event:</h1>
         <h1 id="event-countdown">
-            <span id="months">10m:</span>
-            <span id="weeks">06w:</span>
-            <span id="days">10d:</span>
-            <span id="hours">06h:</span>
-            <span id="minutes">30m:</span>
-            <span id="seconds">40s</span>
+            <span id="days"></span>
+            <span id="hours"></span>
+            <span id="minutes"></span>
+            <span id="seconds"></span>
         </h1>
         <button id="reset-btn">Reset</button>
     </div>
